--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Получите лучшие условия онлайн.</title>
+    <link id="favicon" href="assets/Favicons/sov.ico" rel="icon" type="image/png" sizes="16x16">
   </head>
   <body>
     <div id="root"></div>
